# OnlineCinema

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
codegen/auth/: openapi.yaml  setup.cfg
codegen/auth/.openapi-generator/: FILES
codegen/auth/src/openapi_server/: main.py
codegen/auth/src/openapi_server/apis/: authentication_api.py  authentication_api_base.py  health_api.py  health_api_base.py  o_auth_api.py  o_auth_api_base.py  root_api.py  root_api_base.py
codegen/auth/src/openapi_server/models/: auth_response.py  http_validation_error.py  logout_request.py  message_response.py  o_auth_authorization_response.py  o_auth_callback_response.py  token_pair.py  token_refresh.py  token_response.py  user_login.py  user_register.py  user_response.py  validation_error.py  validation_error_loc_inner.py
codegen/auth/tests/: test_authentication_api.py  test_health_api.py  test_o_auth_api.py  test_root_api.py
codegen/catalog/: openapi.yaml  setup.cfg
codegen/catalog/.openapi-generator/: FILES
codegen/catalog/src/openapi_server/: main.py
codegen/catalog/src/openapi_server/apis/: movies_admin_api.py  movies_admin_api_base.py  movies_api.py  movies_api_base.py  movies_public_api.py  movies_public_api_base.py
codegen/catalog/src/openapi_server/models/: genre_response.py  http_validation_error.py  movie_create.py  movie_detail_response.py  movie_list_response.py  movie_response.py  movie_update.py  person_response.py  validation_error.py  validation_error_loc_inner.py
codegen/catalog/tests/: test_movies_admin_api.py  test_movies_api.py  test_movies_public_api.py
codegen/search/: openapi.yaml  setup.cfg
codegen/search/.openapi-generator/: FILES
codegen/search/src/openapi_server/: main.py
codegen/search/src/openapi_server/apis/: default_api_base.py  search_api.py  search_api_base.py
codegen/search/src/openapi_server/models/: director_info.py  genre_info.py  http_validation_error.py  movie_search_result.py  person_info.py  search_response.py  (+4 more)
codegen/search/tests/: test_default_api.py  test_search_api.py
codegen/streaming/: openapi.yaml  setup.cfg
codegen/streaming/.openapi-generator/: FILES
codegen/streaming/src/openapi_server/: main.py
codegen/streaming/tests/: test_streaming_api.py
(+241 files in other folders)
