[metadata]
name = openapi_server
version = 1.0.0
description = Video streaming service with S3/MinIO, signed URLs, and watch progress tracking
long_description = file: README.md
keywords = OpenAPI Streaming Service
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
